# Customer-segmentation-and-muti-class-classification

./: PERSONAS.md  README.md  pyproject.toml  temp_fix.py
notebooks/: PCA.txt  customer_segmet.ipynb
